--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
   "license": "ISC",
   "dependencies": {
     "@azure/service-bus": "^7.1.0",
+    "@azure/storage-file-share": "^12.6.0",
+    "adm-zip": "^0.5.5",
     "aws-sdk": "^2.847.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "decompress": "^4.2.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "file-type": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
     "multer": "^1.4.2",
     "multer-azure-blob-storage": "^1.0.2",
     "multer-azure-storage": "^0.2.0",
-    "multer-s3": "^2.9.0"
+    "multer-s3": "^2.9.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
